[+] ABYSSP-22 #comment /api-api-categories/api/{uuid} api path developed only with get method [+] ABYSSP-22 #in-review #assign ilkiz.kiziltas #comment /api-api-categories/subject/{uuid} api path developed only with get method [+] ABYSSP-24 #in-review #assign ilkiz.kiziltas #comment /api-api-categories/businesses/subject/{uuid} api path developed only with get method [+] ABYSSP-26 #in-review #assign ilkiz.kiziltas #comment /api-api-categories/proxies/subject/{uuid} api path developed only with get method
